--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
         "@material-ui/icons": "^4.2.1",
         "bootstrap": "^4.3.1",
         "cross-env": "^5.2.0",
+        "date-fns": "^2.0.0-beta.5",
         "material-table": "^1.50.0",
         "react": "^16.8.6",
         "react-bootstrap": "^1.0.0-beta.12",
